# ot-harjoitustyo2025

./: .gitignore  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: .coveragearc  database_connection.py  index.py  initialize_database.py
src/entities/: post.py  user.py
src/repository/: post_repository.py  user_repo.py  user_repository.py
src/service/: diary_service.py
src/tests/: conftest.py
src/tests/repositories/: post_repository_test.py  user_repository_test.py
src/tests/service/: diary_service_test.py
src/ui/: diary_view.py  login_view.py  main_view.py  register_view.py  ui.py
