[tool.poetry]
name = "ot-harjoitustyo2025"
version = "0.1.0"
description = ""
authors = ["Riina Immonen <riina.immonen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
